--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<table>
+<table border="3">
     <caption class="caption"><u>SALANI MASS IT TRAINING</u></caption>
     <caption>Classes Shedule (lab-1)</caption>
     <thead>
@@ -34,8 +34,6 @@
 
     <tbody>
     <tr>
-        <!-- td-1 class lightblue walon ko di ha ,td-2 orange ko, td-3 lightgreen ko,td-4 burlywood ko,td-5 brown type colour ko,td-6 purple type ko,td-7 greykuch type ko,aur td-8 aliceblue ko ko -->
-
         <td>Monday</td>
         <td colspan="3" class="td-1">9am to 11am <br> Web and App <br> (Sir Haider)</td>
         <td colspan="2" class="td-1">11am to 1pm <br> Web and App <br> (Sir Kashif)</td>
